--- a/views/about.html
+++ b/views/about.html
@@ -38,20 +38,23 @@
 		</div>
 		<div class="container">
 			<div class="row">
-					<div class="col-lg-12 text-center">
-
-							<h1>ABOUT</h1>
-						<!-- <div><img src = "img/Yummy.png" width="200" height ="120"/></div> -->
-						<h5>"Drawing Feelings" is a personal journey of finding my inside and outside worlds through daily drawings of objects that represent my feelings. The story begins on Feb 19th showing my emotions about thesis, and ends on March 20th with feelings of adventure while being on spring break.</h5>
-							<br></br><h1>ART MANIFESTO</h1><br></br>
-<h5>1. 	When I was little I used to draw and paint a lot. Remember what you liked when you were a child and do that again. Maybe that’s the secret of becoming confident and eliminating doubtfulness about your work.<br></br>
+				<div class="col-md-1"></div>
+					<div class="col-lg-10 text-center">
+						<br></br>
+						<h5>"Drawing Feelings" is a personal journey of finding my inside and outside worlds through daily drawings of objects that represent my feelings. The story begins on Feb 19th and ends on March 20th 2017.</h5>
+						<br></br>
+						<div><img src="./img/desk.JPG" width="80%"/>
+						</div>
+						<br></br>
+						<h1>ART MANIFESTO</h1><br></br>
+						<h5>1. 	When I was little I used to draw and paint a lot. Remember what you liked when you were a child and do that again. Maybe that’s the secret of becoming confident about your work.<br></br>
 2. 	There are always two worlds inside us: what we show to the world and what we don’t show. Make your worlds meet in the middle.<br></br>
 3. 	Define what’s most important for you in life and eliminate everything else.</h5>
 					</div>
-
+					<div class="col-md-1"></div>
+					</div>
+				</div>
 			</div>
-		</div>
-	</div>
 
 
 </body>
