--- a/views/feelings.html
+++ b/views/feelings.html
@@ -52,9 +52,269 @@
             </div>
         </div>
         <div class="container">
-          <div id="heatmap">
+            <div class="col-md-12">
+                <br></br>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <h1>The World Outside</h1>
 
-          </div>
+                    <div class="row" id='happyOut'>
+                        <div class='col-md-12 fl'>&nbsp;happy</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='sadOut'>
+                        <div class='col-md-12 fl'>&nbsp;sad</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='tiredOut'>
+                        <div class='col-md-12 fl'>&nbsp;tired</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='gratefulOut'>
+                        <div class='col-md-12 fl'>&nbsp;grateful</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='productiveOut'>
+                        <div class='col-md-12 fl'>&nbsp;productive</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='excitedOut'>
+                        <div class='col-md-12 fl'>&nbsp;excited</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='stressedOut'>
+                        <div class='col-md-12 fl'>&nbsp;stressed</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='confidentOut'>
+                        <div class='col-md-12 fl'>&nbsp;confident</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='inspiredOut'>
+                        <div class='col-md-12 fl'>&nbsp;inspired</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='exhaustedOut'>
+                        <div class='col-md-12 fl'>&nbsp;exhausted</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='indecisiveOut'>
+                        <div class='col-md-12 fl'>&nbsp;indecisive</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='relaxedOut'>
+                        <div class='col-md-12 fl'>&nbsp;relaxed</div>
+                    </div>
+
+                    <!-- <br></br>
+                    <div class="row" id='enlightenedOut'>
+                        <div class='col-md-12 fl'>&nbsp;enlightened</div>
+                    </div> -->
+
+                    <br></br>
+                    <div class="row" id='hungryOut'>
+                        <div class='col-md-12 fl'>&nbsp;hungry</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='worriedOut'>
+                        <div class='col-md-12 fl'>&nbsp;worried</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='balancedOut'>
+                        <div class='col-md-12 fl'>&nbsp;balanced</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='emotionalOut'>
+                        <div class='col-md-12 fl'>&nbsp;emotional</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='accomplishedOut'>
+                        <div class='col-md-12 fl'>&nbsp;accomplished</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='frustratedOut'>
+                        <div class='col-md-12 fl'>&nbsp;frustrated</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='doubtfulOut'>
+                        <div class='col-md-12 fl'>&nbsp;doubtful</div>
+                    </div>
+
+
+                    <!-- <br></br>
+                    <div class="row" id='positiveOut'>
+                        <div class='col-md-12 fl'>&nbsp;positive</div>
+                    </div> -->
+
+                    <br></br>
+                    <div class="row" id='annoyedOut'>
+                        <div class='col-md-12 fl'>&nbsp;annoyed</div>
+                    </div>
+                    <!--
+                    <br></br>
+                    <div class="row" id='hurtOut'>
+                        <div class='col-md-12 fl'>&nbsp;hurt</div>
+                    </div> -->
+
+                    <!-- <br></br>
+                    <div class="row" id='lostOut'>
+                        <div class='col-md-12 fl'>&nbsp;lost</div>
+                    </div> -->
+
+                    <!-- <br></br>
+                    <div class="row" id='inloveOut'>
+                        <div class='col-md-12 fl'>&nbsp;in love</div>
+                    </div> -->
+                </div>
+
+                <div class="col-md-6">
+                    <h1>The World Inside</h1>
+
+                    <div class="row" id='happyIn'>
+                        <div class='col-md-12 fl'>&nbsp;happy</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='sadIn'>
+                        <div class='col-md-12 fl'>&nbsp;sad</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='tiredIn'>
+                        <div class='col-md-12 fl'>&nbsp;tired</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='gratefulIn'>
+                        <div class='col-md-12 fl'>&nbsp;grateful</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='productiveIn'>
+                        <div class='col-md-12 fl'>&nbsp;productive</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='excitedIn'>
+                        <div class='col-md-12 fl'>&nbsp;excited</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='stressedIn'>
+                        <div class='col-md-12 fl'>&nbsp;stressed</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='confidentIn'>
+                        <div class='col-md-12 fl'>&nbsp;confident</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='inspiredIn'>
+                        <div class='col-md-12 fl'>&nbsp;inspired</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='exhaustedIn'>
+                        <div class='col-md-12 fl'>&nbsp;exhausted</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='indecisiveIn'>
+                        <div class='col-md-12 fl'>&nbsp;indecisive</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='relaxedIn'>
+                        <div class='col-md-12 fl'>&nbsp;relaxed</div>
+                    </div>
+
+                    <!-- <br></br>
+                    <div class="row" id='enlightenedIn'>
+                        <div class='col-md-12 fl'>&nbsp;enlightened</div>
+                    </div> -->
+
+                    <br></br>
+                    <div class="row" id='hungryIn'>
+                        <div class='col-md-12 fl'>&nbsp;hungry</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='worriedIn'>
+                        <div class='col-md-12 fl'>&nbsp;worried</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='balancedIn'>
+                        <div class='col-md-12 fl'>&nbsp;balanced</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='emotionalIn'>
+                        <div class='col-md-12 fl'>&nbsp;emotional</div>
+                    </div>
+
+
+                    <br></br>
+                    <div class="row" id='accomplishedIn'>
+                        <div class='col-md-12 fl'>&nbsp;accomplished</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='frustratedIn'>
+                        <div class='col-md-12 fl'>&nbsp;frustrated</div>
+                    </div>
+
+                    <br></br>
+                    <div class="row" id='doubtfulIn'>
+                        <div class='col-md-12 fl'>&nbsp;doubtful</div>
+                    </div>
+
+                    <!-- <br></br>
+                    <div class="row" id='positiveIn'>
+                        <div class='col-md-12 fl'>&nbsp;positive</div>
+                    </div> -->
+
+                    <br></br>
+                    <div class="row" id='annoyedIn'>
+                        <div class='col-md-12 fl'>&nbsp;annoyed</div>
+                    </div>
+
+                    <!-- <br></br>
+                    <div class="row" id='hurtIn'>
+                        <div class='col-md-12 fl'>&nbsp;hurt</div>
+                    </div> -->
+
+                    <!-- <br></br>
+                    <div class="row" id='lostIn'>
+                        <div class='col-md-12 fl'>&nbsp;lost</div>
+                    </div> -->
+
+                    <!-- <br></br>
+                    <div class="row" id='inloveIn'>
+                        <div class='col-md-12 fl'>&nbsp;in love</div>
+                    </div> -->
+
+                </div>
+            </div>
         </div>
     </div>
 </body>
