--- a/views/home.html
+++ b/views/home.html
@@ -616,7 +616,7 @@
                     <h5>What if my feelings would be foreign language letters?</h5>
                     <div id="c17out">
                     </div> <br>
-                    <h6>Today I had my thesis presentation and it didn't go as well as I expected so I felt confused, confident, lost, annoyed, frustrated, exhausted, down, stressed, nervous, and pissed about some of the feedback I got.</h6>
+                    <h6>Today I had my midterm presentation for thesis and it didn't go as well as I expected so I felt confused, confident, lost, annoyed, frustrated, exhausted, down, stressed, nervous, and pissed about some of the feedback I got.</h6>
                 </div>
                 <div class="col-lg-6"><br></br>
                     <h1>The World Inside</h1>
@@ -886,7 +886,6 @@
             <!-- </div> -->
         </div>
     </div>
-    <!-- <div id="sketch-holder" ></div> -->
 
 
 
