--- a/views/home.html
+++ b/views/home.html
@@ -102,13 +102,13 @@
                     <h5>What if my feelings would be Washington Square Park?</h5>
                     <div id="c1out">
                     </div>
-                    <h6>Last time I drew was 14 years ago. I didn't know where to start so I took a walk in Washington Square Park. Since I still don't know what to do for thesis, I felt stressed, thoughtful, but happy to take this beautiful walk, while the sun was shinning.</h6>
+                    <h6>Today I felt stressed and thoughtful about thesis so I decided to take a walk in Washington Square Park. It was a gorgeous warm day 65F and I felt happy to take this beautiful walk, while the sun was shinning. When I came back home I decided to start drawing my feelings. Last time I drew was 14 years ago.</h6>
                 </div>
                 <div class="col-lg-6"><br></br>
                     <h1>The World Inside</h1>
                     <h5>What if my feelings would be my childhood bike?</h5>
                     <div id="c1in"></div>
-                    <h6>When I finished 8th grade I went for the summer to Germany to work. With the money I earned I bought a bike. My bike meant the world to me and was my way of escaping the world. Today I felt confused, lost, and panicked so I took a bike ride.</h6>
+                    <h6>When I finished 8th grade I went for the summer to Germany to visit my aunt and work. With the money I earned I bought a bike. My bike meant the world to me and was my way of escaping the world. Today I felt confused, lost, and panicked about thesis and I decided to represent my feelings as my childhood bike.</h6>
                 </div>
             </div>
 
@@ -135,219 +135,6 @@
                     <h4>Day 3, Feb 21st 2017</h4>
                     <h1>The World Outside</h1>
                     <h5>What if my feelings would be tiles?</h5>
-                    <!-- <div class="hex-row">
-
-                            <div class="hex hiddenhex">
-                                <div class="left"></div>
-                                <div class="middle"></div>
-                                <div class="right"></div>
-                            </div>
-
-                            <div class="hex-holder">
-                                <div class="hex hex-back even green">
-                                    <div class="left"></div>
-                                    <div class="middle">
-                                        <div class="hover-hex">
-                                            <h5>calm about the app idea</h5></div>
-                                    </div>
-                                    <div class="right"></div>
-                                </div>
-                                <div class="hex hex-front even green">
-                                    <div class="left"></div>
-                                    <div class="middle"></div>
-                                    <div class="right"></div>
-                                </div>
-                            </div>
-
-                            <div class="hex-holder">
-                                <div class="hex hex-back purple">
-                                    <div class="left"></div>
-                                    <div class="middle">
-                                        <div class="hover-hex">
-                                            <h5>worried about the real use of it in the world</h5></div>
-                                    </div>
-                                    <div class="right"></div>
-                                </div>
-                                <div class="hex hex-front purple">
-                                    <div class="left"></div>
-                                    <div class="middle"></div>
-                                    <div class="right"></div>
-                                </div>
-                            </div>
-
-                            <div class="hex-holder">
-                                <div class="hex hex-back even black">
-                                    <div class="left"></div>
-                                    <div class="middle">
-                                        <div class="hover-hex">
-                                            <h5>stressed about midterm</h5></div>
-                                    </div>
-                                    <div class="right"></div>
-                                </div>
-                                <div class="hex hex-front even black">
-                                    <div class="left"></div>
-                                    <div class="middle"></div>
-                                    <div class="right"></div>
-                                </div>
-                            </div>
-
-                            <div class="hex-holder">
-                                <div class="hex hex-back pink">
-                                    <div class="left"></div>
-                                    <div class="middle">
-                                        <div class="hover-hex">
-                                            <h5>confident after talking to Robin</h5></div>
-                                    </div>
-                                    <div class="right"></div>
-                                </div>
-                                <div class="hex hex-front pink">
-                                    <div class="left"></div>
-                                    <div class="middle"></div>
-                                    <div class="right"></div>
-                                </div>
-                            </div>
-
-                        </div> -->
-
-
-                    <!-- <div class="hex-row">
-                            <div class="hex-holder">
-                                <div class="hex hex-back pink">
-                                    <div class="left"></div>
-                                    <div class="middle">
-                                        <div class="hover-hex">
-                                            <h5>confident about thesis idea</h5></div>
-                                    </div>
-                                    <div class="right"></div>
-                                </div>
-                                <div class="hex hex-front pink">
-                                    <div class="left"></div>
-                                    <div class="middle"></div>
-                                    <div class="right"></div>
-                                </div>
-                            </div>
-
-                            <div class="hex-holder">
-                                <div class="hex hex-back even blue">
-                                    <div class="left"></div>
-                                    <div class="middle">
-                                        <div class="hover-hex">
-                                            <h5>tired after class</h5></div>
-                                    </div>
-                                    <div class="right"></div>
-                                </div>
-                                <div class="hex hex-front even blue">
-                                    <div class="left"></div>
-                                    <div class="middle"></div>
-                                    <div class="right"></div>
-                                </div>
-                            </div>
-
-                            <div class="hex-holder">
-                                <div class="hex hex-back red">
-                                    <div class="left"></div>
-                                    <div class="middle">
-                                        <div class="hover-hex">
-                                            <h5>grateful to Danielle for offering to user test it</h5></div>
-                                    </div>
-                                    <div class="right"></div>
-                                </div>
-                                <div class="hex hex-front red">
-                                    <div class="left"></div>
-                                    <div class="middle"></div>
-                                    <div class="right"></div>
-                                </div>
-                            </div>
-
-                            <div class="hex-holder">
-                                <div class="hex hex-back even lgreen">
-                                    <div class="left"></div>
-                                    <div class="middle">
-                                        <div class="hover-hex">
-                                            <h5>great after talking to Jingwen</h5></div>
-                                    </div>
-                                    <div class="right"></div>
-                                </div>
-                                <div class="hex hex-front even lgreen">
-                                    <div class="left"></div>
-                                    <div class="middle"></div>
-                                    <div class="right"></div>
-                                </div>
-                            </div>
-
-
-                            <div class="hex-holder">
-                                <div class="hex hex-back brown">
-                                    <div class="left"></div>
-                                    <div class="middle">
-                                        <div class="hover-hex">
-                                            <h5>thoughtful after talking to Matt</h5></div>
-                                    </div>
-                                    <div class="right"></div>
-                                </div>
-                                <div class="hex hex-front brown">
-                                    <div class="left"></div>
-                                    <div class="middle"></div>
-                                    <div class="right"></div>
-                                </div>
-                            </div>
-                        </div> -->
-
-
-
-                    <!-- <div class="hex-row">
-                            <div class="hex hiddenhex">
-                                <div class="left"></div>
-                                <div class="middle"></div>
-                                <div class="right"></div>
-                            </div>
-                            <div class="hex even hiddenhex">
-                                <div class="left"></div>
-                                <div class="middle"></div>
-                                <div class="right"></div>
-                            </div>
-
-                            <div class="hex-holder">
-                                <div class="hex hex-back orange">
-                                    <div class="left"></div>
-                                    <div class="middle">
-                                        <div class="hover-hex">
-                                            <h5>excited to build it</h5></div>
-                                    </div>
-                                    <div class="right"></div>
-                                </div>
-                                <div class="hex hex-front orange">
-                                    <div class="left"></div>
-                                    <div class="middle"></div>
-                                    <div class="right"></div>
-                                </div>
-                            </div>
-
-
-                            <div class="hex even hiddenhex">
-                                <div class="left"></div>
-                                <div class="middle"></div>
-                                <div class="right"></div>
-                            </div>
-
-
-                            <div class="hex-holder">
-                                <div class="hex hex-back yellow">
-                                    <div class="left"></div>
-                                    <div class="middle">
-                                        <div class="hover-hex">
-                                            <h5>bored after class</h5></div>
-                                    </div>
-                                    <div class="right"></div>
-                                </div>
-                                <div class="hex hex-front yellow">
-                                    <div class="left"></div>
-                                    <div class="middle"></div>
-                                    <div class="right"></div>
-                                </div>
-                            </div>
-
-                        </div> -->
                     <div id="c3out"></div> <br>
                     <h6>Today I had my thesis class at NYU ITP. I had such a mix of feelings: confident, worried, excited, calm, thoughtful, grateful, great, bored, tired, and stressed about the midterm.</h6>
 
