--- a/views/about.html
+++ b/views/about.html
@@ -11,11 +11,6 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<!-- <script type="text/javascript" src="datadumper.js"></script>
-<script type="text/javascript" src="rivescript.js"></script> -->
-	<script src="/libraries/p5.js" type="text/javascript"></script>
-	<script src="/libraries/p5.dom.js" type="text/javascript"></script>
-	<script src="/libraries/p5.sound.js" type="text/javascript"></script>
 	<script src="//d3js.org/d3.v3.min.js"></script>
 </head>
 
@@ -39,22 +34,27 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-1"></div>
-					<div class="col-lg-10 text-center">
-						<br></br>
-						<h5>"Drawing Feelings" is a personal journey of finding my inside and outside worlds through daily drawings of objects that represent my feelings. The story begins on Feb 19th and ends on March 20th 2017.</h5>
-						<br></br>
-						<div><img src="./img/desk.JPG" width="80%"/>
-						</div>
-						<br></br>
-						<h1>ART MANIFESTO</h1><br></br>
-						<h5>1. 	When I was little I used to draw and paint a lot. Remember what you liked when you were a child and do that again. Maybe that’s the secret of becoming confident about your work.<br></br>
+				<div class="col-lg-10 text-center">
+					<br></br>
+					<h5>"Drawing Feelings" is a personal journey of finding my inside and outside worlds through daily drawings of objects that represent my feelings. World Inside represents how we feel in society and World Inside represents how we really feel and what we hide from the world. The story begins on Feb 19th and ends on March 20th 2017.</h5>
+					<br></br>
+					<video width="80%" controls>
+  				<source src="./img/thesisvideo.mov" type="video/mp4">
+						<source src="./img/thesisvideo.mov" type="video/mov">
+					</video>
+					<br></br>
+					<h1>ART MANIFESTO</h1><br></br>
+					<h5>1. 	When I was little I used to draw and paint a lot. Remember what you liked when you were a child and do that again. Maybe that’s the secret of becoming confident about your work.<br></br>
 2. 	There are always two worlds inside us: what we show to the world and what we don’t show. Make your worlds meet in the middle.<br></br>
 3. 	Define what’s most important for you in life and eliminate everything else.</h5>
-					</div>
-					<div class="col-md-1"></div>
+					<br></br>
+					<div><img src="./img/desk.JPG" width="80%" />
 					</div>
 				</div>
+				<div class="col-md-1"></div>
 			</div>
+		</div>
+	</div>
 
 
 </body>
