--- a/views/home.html
+++ b/views/home.html
@@ -76,20 +76,20 @@
         <div class="container" style="position: fixed;
     margin-left: 120px;
     top: 0px; z-index:10;">
-          <div class="row">
-              <br></br>
-              <div class="col-md-8"></div>
-              <div class="col-md-4">
-                  <nav class="nav justify-content-end" role="tablist">
-                      <a class="nav-link" href="/">Story</a>
-                      <a class="nav-link" href="home">Days</a>
-                      <a class="nav-link" href="feelings">Feelings</a>
-                      <a class="nav-link" href="sketches">Sketches</a>
-                      <a class="nav-link active" href="about">About</a>
-                  </nav>
-              </div>
-              <br></br>
-          </div>
+            <div class="row">
+                <br></br>
+                <div class="col-md-8"></div>
+                <div class="col-md-4">
+                    <nav class="nav justify-content-end" role="tablist">
+                        <a class="nav-link" href="/">Story</a>
+                        <a class="nav-link" href="home">Days</a>
+                        <a class="nav-link" href="feelings">Feelings</a>
+                        <a class="nav-link" href="sketches">Sketches</a>
+                        <a class="nav-link active" href="about">About</a>
+                    </nav>
+                </div>
+                <br></br>
+            </div>
         </div>
 
         <div class="container section" id="nav-container">
@@ -125,7 +125,7 @@
                     <h1>The World Inside</h1>
                     <h5>What if my feelings would be my tiny car?</h5>
                     <div id="c2in"></div><br>
-                    <h6>If my feelings would be my tiny car (which is silver not red as its name is Baby Car), I would drive them far away and all my stress and worries about thesis would be gone! Today I felt broken, and indecisive.</h6>
+                    <h6>If my feelings would be my tiny car (which is silver not red and its name is Baby Car), I would drive them far away and all my stress and worries about thesis would be gone! Today I felt broken, and indecisive.</h6>
                 </div>
             </div>
 
@@ -184,7 +184,7 @@
                     <h5>What if my feelings would be light bulbs?</h5>
                     <div id="c5in">
                     </div>
-                    <h6>Spoke to my mom tonight. She said I should be happy and grateful to be in NYC and study at a great school. I felt enlightened and decided my feelings tonight are going to be light bulbs.</h2>
+                    <h6>I spoke to my mom tonight. She said I should be happy and grateful to be in NYC and study at NYU. I felt enlightened and decided my feelings are going to be light bulbs tonight.</h2>
                 </div>
             </div>
 
@@ -195,7 +195,7 @@
                     <h1>The World Outside</h1>
                     <h5>What if my feelings were wheels?</h5>
                     <div id="c6out"></div> <br>
-                    <h6>Today I had to take my car to Toyota and thought about drawing my feelungs as wheels. I felt tired, lucky, grateful, confident, inspired, positive, motivated, ready, and uncertain.</h6>
+                    <h6>Today I had to take my car to Toyota and thought about drawing my feelings as wheels. I felt tired, lucky, grateful, confident, inspired, positive, motivated, ready, and uncertain.</h6>
                 </div>
                 <div class="col-lg-6"><br></br>
                     <h1>The World Inside</h1>
@@ -213,7 +213,7 @@
                     <h1>The World Outside</h1>
                     <h5>What if my feelings would be books?</h5>
                     <div id="c7out"></div> <br>
-                    <h6>Gosh I love books! I'm so old fashion and love reading books. Went to Bobst Library to borrow some books for thesis and felt productive, energetic, excited, creative, relieved, inspired.</h6>
+                    <h6>Gosh I love books! I'm so old fashion and love reading books. Went to Bobst Library to borrow some books for thesis and felt productive, energetic, excited, creative, relieved, and inspired.</h6>
                 </div>
                 <div class="col-lg-6"><br></br>
                     <h1>The World Inside</h1>
@@ -470,7 +470,7 @@
                     <h4>What if my feelings would be "Papanasi"?</h4>
                     <div id="c20in">
                     </div>
-                    <h6>'Papanasi'is a Romanian desert and also the best desert in the world! My boyfriend and I went to a Romanian restaurant and I ate papanasi and was so happy!</h6>
+                    <h6>'Papanasi' is a Romanian desert and also the best desert in the world! My boyfriend and I went to a Romanian restaurant and ate papanasi and was so happy!</h6>
                 </div>
             </div>
 
@@ -580,7 +580,7 @@
                     <h5>What if my feelings would be cables?</h5>
                     <div id="c26out">
                     </div> <br>
-                    <h6>I work in the equipment room at ITP aka ER and I'm covered in cables so I thought of drawing my feelings as cables today. I had to present a project in front of VCs and was excited, accomplished, and exhausted.</h6>
+                    <h6>I worked in the equipment room at ITP today aka ER where I'm covered in cables so I thought of representing my feelings as cables today. I had to present a project in front of VCs and was excited, accomplished, and exhausted.</h6>
                 </div>
                 <div class="col-lg-6"><br></br>
                     <h1>The World Inside</h1>
@@ -667,14 +667,11 @@
                     <h5>What if my feelings would be the ocean?</h5>
                     <div id="c30in">
                     </div>
-                    <h6>As per my last Inside World day I wanted to draw the ocean, which I feel so close to even through my name Ondina which means mermaid. Today I felt ready, different, accomplished, excited, proud, happy, and confident about thesis.</h6>
+                    <h6>As per my last Inside World day I wanted to draw the ocean, which I feel so close to even through my name Ondina which means mermaid. Today I felt ready, different, accomplished, excited, proud, happy, and confident about thesis. Feelings are like waves: they keep coming and going.</h6>
                 </div>
             </div>
-            <!-- </div> -->
         </div>
     </div>
-
-
 
 </body>
 
